--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,44 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.wrap_button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20%;
+}
+
+.button {
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 15px;
+  padding-top: 10px;
+  padding-right: 15px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+}
+
+button:nth-child(2) {
+  margin-left: 5px;
+}
+
+.timer {
+  display: flex;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.field:not(:first-child) {
+  margin-left: 15px;
+}
+
+.value {
+  font-weight: 600;
+  font-size: 35px;
+}
